force-app/main/default/objects/OpportunityAdditionalInfo__c/OpportunityAdditionalInfo__c.object-meta.xml
<CustomObject>
    <label>Opportunity Additional Info</label>
    <nameField>
        <displayFormat>OAI-{00000000}</displayFormat>
        <label>Opportunity Additional Data Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunities Additional Info</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>