force-app/main/default/objects/OpportunityAdditionalInfo__c/fields/InfoType__c.field-meta.xml
<CustomField>
    <fullName>InfoType__c</fullName>
    <label>Info Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>WEEKLYCOMMENT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>