force-app/main/default/objects/OpportunityAdditionalInfo__c/fields/SentAnswer__c.field-meta.xml
<CustomField>
    <fullName>SentAnswer__c</fullName>
    <label>Sent Answer</label>
    <type>DateTime</type>
</CustomField>