force-app/main/default/objects/OpportunityAdditionalInfo__c/fields/Value2__c.field-meta.xml
<CustomField>
    <fullName>Value2__c</fullName>
    <label>Value 2</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>