force-app/main/default/objects/OpportunityAdditionalInfo__c/fields/Value4__c.field-meta.xml
<CustomField>
    <fullName>Value4__c</fullName>
    <label>Value 4</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>