force-app/main/default/objects/OpportunityAdditionalInfo__c/fields/WeeklyCompleted__c.field-meta.xml
<CustomField>
    <fullName>WeeklyCompleted__c</fullName>
    <description>Fecha en la que se ha completado el registro y el usuario ha puesto un comentario</description>
    <label>Weekly Completed</label>
    <type>DateTime</type>
</CustomField>